--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "aulas",
+  "name": "modulo03",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
+  },
   "dependencies": {
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
@@ -18,6 +21,8 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   }
 }
